--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "@testing-library/user-event": "^7.2.1",
     "chart.js": "^2.9.3",
     "formik": "^2.1.4",
-    "install": "^0.13.0",
-    "npm": "^6.13.7",
     "react": "^16.12.0",
+    "react-calendar": "^2.19.2",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -21,8 +20,6 @@
     "redux-persist": "^6.0.0",
     "reselect": "^4.0.0",
     "shortid": "^2.2.15",
-    "toolkit": "^1.5.4",
-    "uuid": "^3.4.0",
     "yup": "^0.28.1"
   },
   "scripts": {
