--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
     "shortid": "^2.2.15",
     "yup": "^0.28.1"
   },
+  "devDependencies": {
+    "husky": "^4.2.3",
+    "lint-staged": "^10.0.7",
+    "prettier": "^1.19.1",
+    "prop-types": "^15.7.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
